# NeuralNetworks

./: .gitignore  CMakeLists.txt  README.md  compile.sh  handDraw.cpp  init.sh  main.cpp  mainBackProp.cpp  mainGeneticLearning.cpp  output.txt  run.sh  test.cpp
include/: Actions.h  BackPropagation.h  Drone.h  Graphics.h  Network.h  OpenData.h  Propagation.h  Target.h  Utils.h
neural-networks-and-deep-learning-master/: .gitignore
neural-networks-and-deep-learning-master/src/: mnist_loader.py
src/: Actions.cpp  BackPropagation.cpp  Drone.cpp  Matrix.cpp  Network.cpp  OpenData.cpp  Propagation.cpp  Target.cpp  Utils.cpp
